--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --basic-black-color: #000000;
   --additional-black-color: #212121;
   --invers-color: #ffffff;
-  --accent-color: #d7b399;
+  --accent-color: rgb(215, 179, 153);
 
   --background-cream-color: #f9f6f1;
   --background-gray-color: #f4f4f4;
@@ -317,10 +317,10 @@ li {
   top: 0;
   right: 0;
   transform-origin: top right;
+  width: 100%;
+  height: 100%;
 
-  width: 50%;
   display: flex;
-  align-items: center;
   justify-content: center;
   padding: 20px;
 
@@ -328,20 +328,43 @@ li {
   z-index: 2;
 
   opacity: 1;
+  visibility: visible;
   transform: scale(1);
 
-  transition: opacity 250ms ease-in-out, transform 250ms ease-in-out;
+  transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out,
+    transform 250ms ease-in-out;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
-  pointer-events: none;
+  visibility: hidden;
 
   transform: scale(0);
 }
 
+.backdrop.is-hidden .modal {
+  transform: perspective(600px) translate(0, -100%) rotateX(45deg);
+}
+
+.backdrop-area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  cursor: default;
+}
+
 .modal {
+  max-width: 50%;
+  z-index: 3;
+
   padding: 20px;
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  transform: perspective(600px) translate(0, 0) rotateX(0);
+  transition: transform 500ms ease-in-out 250ms;
 
   background-color: var(--background-cream-color);
 }
